# SkyGL

./: CMakeLists.txt  README.md
cmake/: FindGLEW.cmake  FindGLFW3.cmake  FindSOIL.cmake
examples/: CMakeLists.txt
examples/A.basic/1.hello/: hello.cpp
examples/A.basic/2.shader/: shader.cpp
examples/A.basic/3.texture/: texture.cpp
examples/A.basic/4.transform/: transform.cpp
examples/A.basic/5.coordinate/: coordinate.cpp
examples/A.basic/6.camera/: camera.cpp
examples/B.lighting/1.colors/: colors.cpp
examples/B.lighting/2.basic/: basic.cpp  basic.frag
examples/B.lighting/3.material/: material.cpp  material.frag
examples/B.lighting/4.map/: map.cpp  map.frag  map.vs
examples/B.lighting/5.caster/: caster.cpp  caster.frag
examples/B.lighting/6.multi/: multi.cpp  multi.frag
examples/C.model/1.load/: load.cpp  load.frag
examples/D.advanced/1.depth/: depth.cpp  depth.frag
examples/D.advanced/10.instance/: instance.cpp  planet.frag  planet.vs
examples/D.advanced/11.anti_aliasing/: anti_aliasing.cpp  anti_aliasing.frag
examples/D.advanced/2.stencil/: single.frag  stencil.cpp
examples/D.advanced/3.blend/: blend.cpp
examples/D.advanced/4.culling/: culling.cpp  culling.vs
examples/D.advanced/5.framebuffer/: framebuffer.cpp  screen.frag
examples/D.advanced/6.cubemap/: cubemap.cpp  cubemap.frag  cubemap.vs  skybox.vs
examples/D.advanced/8.glsl/: blue.frag  glsl.cpp  glsl.vs
examples/D.advanced/9.geometry/: geometry.cpp  geometry.frag  geometry.gs
examples/E.lighting2/1.advanced/: advanced.cpp  advanced.frag
examples/E.lighting2/2.gamma/: gamma.cpp  gamma.frag  gamma.vs
examples/E.lighting2/3.shadowmap/: shadowmap.cpp  shadowmap.frag
examples/E.lighting2/4.pointshadow/: depth.frag  depth.vs  pdepth.gs  pointshadow.cpp  pointshadow.frag  pointshadow.vs
examples/E.lighting2/6.normal/: normal.cpp  normal.frag  normal.vs
examples/E.lighting2/7.parallax/: parallax.cpp  parallex.cpp  parallex.frag  parallex.vs
examples/E.lighting2/8.hdr/: hdr.cpp  hdr.frag  light.frag  light.vs
include/: skygl.h
include/skygl/: buffer.h  color.h  common.h  config.h  error.h  gl.h  math.h  shader.h  texture.h  types.h  utils.h  window.h
include/skygl/basic/: common.h  error.h  types.h  utils.h
include/skygl/calc/: color.h  math.h
include/skygl/gl/: buffer.h  gl.h  shader.h  texture.h
include/skygl/gui/: camera.h  window.h
include/skygl/load/: image.h  model.h
include/skygl/ui/: camera.h  key.h  manipulator.h  window.h
samples/basic/4.transform/: transform.vs
samples/basic/5.coordinate/: coordinate.cpp
samples/basic/6.camera/: camera.cpp  camera.frag
src/: color.cpp  window.cpp
test/: CMakeLists.txt
test/basic/2.shader/: shader.cpp
test/basic/3.texture/: texture.cpp
test/basic/4.transform/: transform.cpp
test/basic/5.coordinate/: coordinate.vs
test/basic/transform/: transform.frag
tests/: CMakeLists.txt
tests/basic/hello/: hello.cpp
tests/basic/shader/: shader.cpp
tests/basic/texture/: texture.cpp  texture.frag
tests/basic/transform/: transform.cpp
